--- a/book.toml
+++ b/book.toml
@@ -13,8 +13,8 @@ mathjax-support = false
 # theme = "theme"
 additional-css = ["theme/custom.css"]
 
-[output.html.playpen]
-editable = false
+[output.html.playground]
+editable = true
 
 [output.html.search]
 limit-results = 20
