--- a/src/cookbook_utils/Cargo.toml
+++ b/src/cookbook_utils/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "randomness"
+name = "cookbook_utils"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.5"
-rand_distr = "0.4.3"
-cookbook_utils = { path = "../../cookbook_utils" }
