--- a/src/algorithms/randomness/Cargo.toml
+++ b/src/algorithms/randomness/Cargo.toml
@@ -11,4 +11,6 @@ doctest = false
 [dependencies]
 rand = "0.8.5"
 rand_distr = "0.4.3"
+
+[dev-dependencies]
 cookbook_utils = { path = "../../cookbook_utils" }
