--- a/src/algorithms/sorting/Cargo.toml
+++ b/src/algorithms/sorting/Cargo.toml
@@ -8,5 +8,5 @@ doctest = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dev-dependencies]
 cookbook_utils = { path = "../../cookbook_utils" }
