Actually migrated cryptography/hashing
Previous "migrated hashing" was actually cryptography/encryption.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ members = [
 	"src/concurrency/parallel",
 	"src/concurrency/thread",
 	"src/cryptography/encryption",
+	"src/cryptography/hashing",
 ]
