Migrated read-write, updated to memmap2
The `memmap` crate appears to be unmaintained, so we have moved
to the `memmap2` crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
 	"src/data_structures/bitfield",
 	"src/datetime/duration",
 	"src/file/dir",
+	"src/file/read-write",
 	"src/hardware/processor",
 	"src/mem/global_static",
 ]
