--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ members = [
 	"src/file/read-write",
 	"src/hardware/processor",
 	"src/mem/global_static",
+	"src/development_tools/build_tools/cc-bundled-static",
 ]
