Migrated cc-bundled-cpp, remove cookbook utils dep
Don't have the cookbook utils as a dependency for the unit tests,
so that the example project directory is clean. Since we didn't
need the run() function, remove that too.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ members = [
 	"src/hardware/processor",
 	"src/mem/global_static",
 	"src/development_tools/build_tools/cc-bundled-static",
+	"src/development_tools/build_tools/cc-bundled-cpp",
 ]
