--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ members = [
 	"src/mem/global_static",
 	"src/development_tools/build_tools/cc-bundled-static",
 	"src/development_tools/build_tools/cc-bundled-cpp",
+	"src/development_tools/build_tools/cc-defines",
 ]
