--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ members = [
 	"src/development_tools/build_tools/cc-bundled-static",
 	"src/development_tools/build_tools/cc-bundled-cpp",
 	"src/development_tools/build_tools/cc-defines",
+	"src/development_tools/debugging/config_log",
 ]
