--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
 	"src/database/sqlite",
 	"src/data_structures/bitfield",
 	"src/datetime/duration",
+	"src/datetime/parse",
 	"src/file/dir",
 	"src/file/read-write",
 	"src/hardware/processor",
