--- a/src/development_tools/debugging/config_log/Cargo.toml
+++ b/src/development_tools/debugging/config_log/Cargo.toml
@@ -9,6 +9,7 @@ doctest = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.19"
 env_logger = "0.9.0"
 log = "0.4.16"
 log4rs = "1.0.0"
