--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,5 @@ members = [
 	"src/development_tools/build_tools/cc-defines",
 	"src/development_tools/debugging/config_log",
 	"src/development_tools/debugging/log",
+	"src/development_tools/versioning",
 ]
