--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,6 @@ members = [
 	"src/development_tools/debugging/config_log",
 	"src/development_tools/debugging/log",
 	"src/development_tools/versioning",
+	"src/encoding/complex",
+	"src/encoding/csv",
 ]
