--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,4 +33,5 @@ members = [
 	"src/science/mathematics/complex_numbers",
 	"src/science/mathematics/linear_algebra",
 	"src/science/mathematics/miscellaneous",
+	"src/science/mathematics/statistics",
 ]
