--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,4 +36,5 @@ members = [
 	"src/science/mathematics/statistics",
 	"src/science/mathematics/trigonometry",
 	"src/text/regex",
+	"src/text/string_parsing",
 ]
